syntax = "proto3";

package history;

import "google/api/annotations.proto";
import "google/api/http.proto";


 option go_package = "github.com/franklynobleC/dictionaryAPIGrpc/grpcServiceB/historyService";


  service  DictionaryHistoryService{
    rpc DictionaryHistory(DictionaryHistoryRequest)returns ( DictionaryHistoryResponse) { 
      option (google.api.http) = {
        get:"/v1/dictionaryHistory/history" 
        
      };
    
    }
  }

  message DictionaryHistoryRequest{}
  
 
 message History{
  
   string word = 2; 
   string meaning = 3;
    // google.protobuf.Struct properties = 3;
 }

  message DictionaryHistoryResponse {
    repeated   History  histories = 4;
  }
